# full-site

./: .gitignore  README.md  docker-compose.yml
client/: codegen.yml  package-lock.json  package.json  svelte.config.js
client/src/lib/: Icon.svelte
client/src/lib/ts/: apolloClient.ts  assets.ts  kratos.ts
client/src/routes/: __layout.svelte  index.svelte
client/src/routes/auth/: login.svelte
client/src/routes/blog/: [slug].svelte
client/static/_blog/: prova.md
kratos/: .env.example  docker-compose.yml  identity.schema.json  kratos.yml  oidc.google.jsonnet
oathkeeper/: access-rules.yml  docker-compose.yml  oathkeeper.yml
server/: .env.example  Cargo.toml  README.md  docker-compose.yml
server/migrations/: 00_create.sql
server/src/: context.rs  main.rs  schema.rs
server/src/domain/: user.rs
