[package]
name = "server"
version = "0.1.0"
authors = ["mautriz <mauro.insacco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# # Web server and graphql executor + server adapter
warp = "0.3.1"
async-graphql = "2.9.8"
async-graphql-warp = "2.9.8"

# Database, connection pooling and tokio-postgres adapter
sqlx = { version = "0.5.5", features = ["macros", "migrate", "runtime-tokio-rustls", "postgres", "all-types"]}

# Http client
reqwest = "0.11.4"

# Serializer
serde = "1.0.126"
serde_json = "1.0.64"

# Async runtime, stream utilities (especially for channels, converts sync to streams, broadcast for graphql subscriptions)
tokio = { version = "1.8.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["time", "sync", "fs"]}

# env
dotenv = "0.15.0"
